src/layout/Header/styles.css
.header {
  align-items: center;
  background: var(--cinza-100);
  display: flex;
  justify-content: space-between;
  height: 3.75rem;
  left: 0;
  padding: 0 20%;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 10;
}

.header:focus,
.navlink:focus,
.logo:focus {
  outline: none;
}

.navlink {
  display: flex;
  justify-content: center;
  align-items: center;
}

.help-and-theme-controls {
  display: inline-flex;
  gap: 0.25rem;
}

@media screen and (max-width: 1700px) {
  .header {
    padding: 0 10vw;
  }  
}

@media screen and (max-width: 1300px) {
  .header {
    gap: 2rem;
    padding: 0 2rem;
  }
}


@media screen and (max-width: 1000px) {
  .header {
    padding: 0 1.25rem;
  }
}

@media screen and (max-width: 650px) {
  .navlink {
    width: 100%;
  }

  .logo {
    left: 22.5vw;
    max-width: 10rem;
    position: fixed;
  }
}

.dark {
  .header {
    background-color: #18181b;
  }
}

.bear {
  .header {
    background-color: #000;
  }
}

